--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -10,3 +10,111 @@
     import 'relative/path/to/stylesheet.scss';
 
 */
+
+.traffic-Light{
+    background: black;
+    padding: 10px;
+    display: inline-block;
+    margin: auto;
+}
+
+.light{
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    background-color: blue;
+}
+
+.red{
+    background: #4d0000;
+    /*background-color: #ff0000;*/
+    border-radius: 50%;
+    width: 100px;
+    height: 100px
+}
+.yellow{
+    background: yellow;
+    border-radius: 50%;
+    width: 100px;
+    height: 100px
+}
+.green{background: green;
+    border-radius: 50%;
+    width: 100px;
+    height: 100px
+}
+.glowRed{
+    box-shadow: 0px 0px 20px 5px #ff0000;
+}
+.glowYello{
+    box-shadow: 0px 0px 20px 5px #ffff00;
+}
+.glowGreen{
+    box-shadow: 0px 0px 20px 5px #08eb4c;
+}
+
+.flex-container  {
+    display: flex;
+    background-color: #ffffff;
+    
+  }
+  
+  .flex-container  div {
+    /*background-color: #ffffff;*/
+    margin: 10px;
+    padding: 20px;
+    font-size: 50px;
+    color: white;
+    align-content: center;
+    text-align: center;
+  }
+
+  .redOn {
+    background-color: #ff0000;
+    border-radius: 50%;
+    width: 100px;
+    height: 100px
+   }
+   .redOff{
+    background-color:#4d0000;
+    border-radius: 50%;
+    width: 100px;
+    height: 100px
+   }
+
+   .yellowOn {
+    background-color: #ffff00;
+    border-radius: 50%;
+    width: 100px;
+    height: 100px
+   }
+   .yellowOff{
+    background-color:#4d4d00;
+    border-radius: 50%;
+    width: 100px;
+    height: 100px
+   }
+   .greenOn{
+    background-color: #00ff00;
+    border-radius: 50%;
+    width: 100px;
+    height: 100px
+   }
+   .greenOff{
+    background-color:#004d00;
+    border-radius: 50%;
+    width: 100px;
+    height: 100px
+   }
+   .semaforo{
+       background: #313638;
+       height: 300px;
+       width: 100px;
+       border-radius: 20px;
+       margin-top: 20px;
+       border: 10px solid black;
+       display: flex;
+       flex-direction: column;
+       align-items: center;
+       justify-content: space-between;
+   }
